<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/tvDotAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/logoText"
        android:textColor="#FF6E40"
        android:textIsSelectable="false"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:autofillHints=""

        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/emailRegistrationLogin"
        android:inputType="textEmailAddress"
        android:soundEffectsEnabled="true"
        android:textColor="#FF6E40"
        android:textColorHighlight="#FF6E40"
        android:textColorHint="@color/normalEditText"
        android:textColorLink="#FF6E40"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDotAct"
        app:layout_constraintVertical_bias="0.01999998" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""

        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/passwordRegistrationLogin"
        android:inputType="textPassword"
        android:soundEffectsEnabled="false"
        android:textColor="#FF6E40"
        android:textColorHighlight="#FF6E40"
        android:textColorHint="#8A8A8A"
        android:textColorLink="#FF6E40"
        android:textCursorDrawable="@drawable/gradient_red_redder_bg"
        android:theme="@style/EditTextTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto_light"
        android:radius="100dp"
        android:shadowColor="#FF6E40"

        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/normalEditText"
        android:textColorLink="#FF6E40"
        android:textSize="18sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.050000012"
        app:strokeColor="@color/normalEditText" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FF6E40"
        android:fontFamily="@font/roboto_light"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.18"
        app:rippleColor="#FFFFFF" />

    <TextView
        android:id="@+id/tvDotActNotice"
        android:layout_width="374dp"
        android:layout_height="wrap_content"

        android:fontFamily="@font/roboto_light"
        android:text="@string/app_notice_text"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.524" />

    <TextView
        android:id="@+id/tvDotActFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/roboto_light"
        android:text="@string/registered_company_text"
        android:textColor="#FF6E40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDotActNotice"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/tvWelcomeAnimated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/moto_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDotActFooter"
        app:layout_constraintVertical_bias="0.04000002" />

</androidx.constraintlayout.widget.ConstraintLayout>